--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
          {{>header}}
+         <p>This site was created by Great Scott. It uses data from muliple websit APIs.</p>
         <img class="portrait" src="/img/Roads-sized.jpg" alt="">
     </div>
     {{>footer}}
